# image-host

./: .dockerignore  .gitignore  Dockerfile  README.md  eslint.config.js  main.py  package-lock.json  package.json  pyproject.toml  schema.yml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
backend/: models.py  serializer.py  views.py
backend/management/commands/: seed.py
backend/migrations/: 0001_initial.py
backend/tests/: stubs.py  test_models.py  test_serializer.py
backend/tests/views/: test_image_view.py  test_share_view.py
backend/views/: image_view.py  react_view.py  share_view.py  user_view.py
frontend/: api.ts  app.tsx  home.tsx  images.tsx  index.html  index.tsx  users.tsx
frontend/api-client/: runtime.ts
frontend/api-client/.openapi-generator/: FILES
frontend/api-client/apis/: ApiApi.ts  ImagesApi.ts  ShareLinksApi.ts  UsersApi.ts  index.ts
frontend/api-client/docs/: AccountTierEnum.md  ApiApi.md  Image.md  ImageGetUrlsResponse.md  ImageListItem.md  ImagePutError.md  ImagesApi.md  ShareLink.md  ShareLinkCreate.md  ShareLinkCreateResponse.md  ShareLinkError.md  ShareLinksApi.md  SizeEnum.md  User.md  UsersApi.md
frontend/api-client/models/: AccountTierEnum.ts  Image.ts  ImageGetUrlsResponse.ts  ImageListItem.ts  ImagePutError.ts  ShareLink.ts  ShareLinkCreate.ts  ShareLinkCreateResponse.ts  ShareLinkError.ts  SizeEnum.ts  User.ts  index.ts
frontend/images/: fullImage.tsx  gridItem.tsx  gridView.tsx  share.tsx  uploadForm.tsx
frontend/tests/: home.test.tsx  users.test.tsx
project/: settings.py  urls.py
(+6 files in other folders)
