[project]
name = "vite-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==6.0.3",
    "django-browser-reload==1.21.0",
    "django-vite==3.1.0"
]
[dependency-groups]
dev = [
    "mypy==1.20.0",
    "django-stubs==6.0.2"
]
[tool.mypy]
strict = true